Make url_request_context dumps include context names

Background dumps do not include URLRequestContext's names because
string attributes are not allowed. SlowReports only has background
dumps. Without the name of the context, we don't know where the contexts
come from.

This CL includes the context names in the names for the allocator dumps.

BUG=705053,669108

Review-Url: https://codereview.chromium.org/2772283003
Cr-Commit-Position: refs/heads/master@{#460116}

Former-commit-id: c4da1de6f90c7149e7b2e6db4ee66a84b355988a